--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# rapid api
 RAPID_API_URL=https://wft-geo-db.p.rapidapi.com/v1/geo
 RAPID_API_KEY=b0ee308d75mshb40970a2ba8b3a9p1ef7ecjsn761ac776e52b
 RAPID_API_HOST=wft-geo-db.p.rapidapi.com
